added remaining funcitonality as well as dice images and background image. Application is now complete and ready to play with frinds :)

--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ body {
       rgba(62, 20, 20, 0.4),
       rgba(62, 20, 20, 0.4)
     ),
-    url(back.jpg);
-  background-size: cover;
+    url(https://whispercolor.com/wp-content/uploads/WCfbrc-TimelesstreasuresB4827.jpg);
+  background-size: auto;
   background-position: center;
   font-family: Lato;
   font-weight: 300;
